main.tf
data "aws_ami" "ubuntu" {
  most_recent = true

  filter {
    name   = "name"
    values = ["ubuntu/images/hvm-ssd/ubuntu-focal-20.04-amd64-server-*"]
  }

  filter {
    name   = "virtualization-type"
    values = ["hvm"] #virtualização assistida por hardware
  }

  owners = ["099720109477"] # Canonical
}

resource "aws_instance" "techtalks_terraform_ec2_1" {
  ami           = data.aws_ami.ubuntu.id
  instance_type = "t2.medium"
  key_name = "terraform" # Insira o nome da chave criada antes.
  subnet_id = "${aws_subnet.techtalks-subnet-public-1.id}"
  vpc_security_group_ids = [aws_security_group.permitir_ssh_http.id]
  associate_public_ip_address = true

  tags = {
    Name = "techtalksterraform"
 # Insira o nome da instância de sua preferência.
  }
}
