subnet.tf
resource "aws_subnet" "techtalks-subnet-public-1" {
    vpc_id = "${aws_vpc.techtalks-vpc.id}"
    cidr_block = "10.0.1.0/24"
    map_public_ip_on_launch = "true" //it makes this a public subnet
    availability_zone = "us-east-1a"
   
}
